# memes_all_day

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: entrypoing.sh  linters.sh
src/appsettings/: models.py
src/core/: celery.py  settings.py  urls.py
src/meme_generator/: apps.py  generator.py  jokeapi_requests.py  memegen_requests.py  tasks.py  utils.py
src/memes/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/memes/migrations/: 0001_initial.py
src/memes/templates/: base.html  favorites.html  index.html  my_memes.html  search.html  upload_meme.html
src/memes/templates/auth/: login.html  signup.html
src/memes/templates/includes/: meme_list.html  meme_post.html  paginator.html
